Fix for non-Unix paths